# vulkan_example

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
libs/glfw/: CMakeLists.txt
libs/imgui/: CMakeLists.txt  imgui_draw.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
libs/imgui/vulkan/: glsl_shader.vert
libs/stb/: CMakeLists.txt
libs/vma/: CMakeLists.txt  vma.h
shaders/: example_frag.glsl  example_vert.glsl
src/: helpers.hpp  main.cpp
